Bug 289917 - Drag-and-drop from Dolphin into Youtube upload web page does not work
Summary: Drag-and-drop from Dolphin into Youtube upload web page does not work
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 1.99
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-27 11:56 UTC by Filip Miletic
Modified: 2011-12-27 14:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Miletic 2011-12-27 11:56:43 UTC
Version:           unspecified
OS:                Linux

Selecting files in Dolphin, then trying to drag-drop them onto Youtube upload page does not work.

A similar action works flawlessly in Nautilus.

Reproducible: Always

Steps to Reproduce:
- Navigate your browser to your Youtube account.

- Select upload videos option.

- The upload web page opens, offering the user either to select a file or drag-drop one for upload.

- Use GNOME's Nautilus to drag and drop a video file.  This works.

- Use Dolphin to do the same.  This does not work.

Actual Results:  
Drag-drop action is not possible.

Expected Results:  
Drag-drop action should work as expected.
Comment 1 Peter Penz 2011-12-27 12:06:52 UTC
Thanks for the report, please let us know which Dolphin version and/or KDE version you are using.
Comment 2 Filip Miletic 2011-12-27 12:09:09 UTC
(In reply to comment #1)
> Thanks for the report, please let us know which Dolphin version and/or KDE
> version you are using.

KDE: 4.7.2
Dolphin: 1.7

(from Ubuntu 11.10)
Comment 3 Peter Penz 2011-12-27 12:15:19 UTC
Thanks, I can reproduce the issue.
Comment 4 Peter Penz 2011-12-27 14:53:38 UTC
Git commit ab4353e2308ba6f2919b54d67d2a9408303ef76d by Peter Penz.
Committed on 27/12/2011 at 15:50.
Pushed by ppenz into branch 'KDE/4.8'.

Fix issue that dragging pictures/videos to Google-Search/YouTube fails
Related: bug 289917
Related: bug 278236
FIXED-IN: 4.8.0

M  +1    -1    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/ab4353e2308ba6f2919b54d67d2a9408303ef76d
Comment 5 Peter Penz 2011-12-27 14:54:03 UTC
Git commit 7e4268535b66408ba6a649a4832ab47494e9e829 by Peter Penz.
Committed on 27/12/2011 at 15:50.
Pushed by ppenz into branch 'master'.

Fix issue that dragging pictures/videos to Google-Search/YouTube fails
Related: bug 289917
Related: bug 278236
FIXED-IN: 4.8.0

M  +1    -1    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/7e4268535b66408ba6a649a4832ab47494e9e829