Fix issue that dragging pictures/videos to Google-Search/YouTube fails

BUG: 289917
BUG: 278236
FIXED-IN: 4.8.0