src/kitemviews/kitemlistcontroller.cpp
@@ -914,7 +914,7 @@ void KItemListController::startDragging()
     const QPixmap pixmap = m_view->createDragPixmap(selectedItems);
     drag->setPixmap(pixmap);
 
-    drag->exec(Qt::MoveAction | Qt::CopyAction | Qt::LinkAction, Qt::IgnoreAction);
+    drag->exec(Qt::CopyAction);
 }
 
 KItemListWidget* KItemListController::hoveredWidget() const
